tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/array/no-close-2.stderr
TOML parse error at line 1, column 11
  |
1 | x = [42 #
  |           ^
invalid array
expected `]`
